--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-12 col-md-6 mt-4 d-md-block oreo" >
                         <div class="hero-image" >
-                            <img class="mb-3"  src="images/ajil.jpg" class="image-fluid" style="width:  400px; height: auto; border-radius: 5px;"  alt="Hero Image">
+                            <img class="mb-3"  src="https://github.com/ajilibrahim20/CSS---My-Site/blob/master/images/ajil.JPG" class="image-fluid" style="width:  400px; height: auto; border-radius: 5px;"  alt="Hero Image">
                         </div>
                     </div>
                 </div>
