--- a/index.html
+++ b/index.html
@@ -649,7 +649,8 @@
                                         <p class="help-block"></p>
                                     </div>
                                     <div>
-                                        <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
+                                        <a href="https://wa.me/+919946071797/?text=Hai" class="btn">Send Message</a>
+
                                     </div>
                                 </form>
                             </div>
@@ -760,8 +761,8 @@
         <script src="lib/lightbox/js/lightbox.min.js"></script>
 
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
+
+
 
         <!-- Template Javascript -->
         <script src="javascript/main.js"></script>
