--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="#home" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item nav-link active">Home</a>
                         <a href="#about" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item nav-link">About</a>
-                        
+
                         <a href="#projects" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item nav-link">Projects</a>
 
                         <a href="#experience" data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-item nav-link">Experience</a>
@@ -356,7 +356,7 @@
                             <h2>General Secretary of Computer Society of India</h2>
                             <h4>CSI CCE</h4>
                             <p>
-                                I was nominated as the facilitator for the 30 Days of Google Cloud programme. I did conduct an info session as well as a study jam demostrating how to create a virtual machine using Google Cloud Platform
+                              I was selected as General Secretary of Computer Society of India, CCE Chapter. Event organizer leader of CSI,CCE.
                             </p>
                         </div>
                     </div>
