--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                             <h2>General Secretary of Computer Society of India</h2>
                             <h4>CSI CCE</h4>
                             <p>
-                              I was selected as General Secretary of Computer Society of India, CCE Chapter. Event organizer leader of CSI,CCE.
+                              I was selected as General Secretary of Computer Society of India, CCE Chapter. Event organizing leader of CSI,CCE.
                             </p>
                         </div>
                     </div>
