--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="navbar navbar-expand-lg bg-light navbar-light " >
             <div class="container-fluid" >
 
-                <a href="https://kevinjacob2001.github.io/" class="navbar-brand ">AJIL IBRAHIM</a>
+                <a href="https://github.com/ajilibrahim20" class="navbar-brand ">AJIL IBRAHIM</a>
                 <button  type="button" class="navbar-toggler ml-auto"  data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon "></span>
                 </button>
